# enc424j600

./: Cargo.toml  shell.nix
.github/workflows/: ci.yml
examples/: tcp_stm32f407.rs  tx_stm32f407.rs
nix/: rustPlatform.nix
src/: lib.rs  nal.rs  rx.rs  smoltcp_phy.rs  spi.rs  tx.rs
