[package]
categories = ["embedded", "no-std"]
name = "enc424j600"
description = "Embbeded Rust Ethernet driver for ENC424J600 Ethernet controller with SPI interface, compatible with STM32F4xx"
authors = ["Harry Ho <hh@m-labs.hk>"]
version = "0.2.0"
keywords = ["ethernet", "eth", "enc424j600", "stm32", "stm32f4xx"]
repository = "https://git.m-labs.hk/M-Labs/ENC424J600"
edition = "2018"
license = "BSD-2-Clause"

[dependencies]
volatile-register = "0.2"
aligned = "0.3"
embedded-hal = "0.2"
smoltcp = { version = "0.7.0", default-features = false, features = [ "socket-raw", "proto-ipv4", "proto-ipv6" ], optional = true }
# Dependencies for NAL
embedded-time = { version = "0.10.1", optional = true }
embedded-nal = { version = "0.1.0", optional = true }
heapless = { version = "0.5.6", optional = true }
# Optional dependencies for building examples
stm32f4xx-hal = { version = "0.8", optional = true }
cortex-m = { version = "0.5", optional = true }
cortex-m-rt = { version = "0.6", optional = true }
cortex-m-rtic = { version = "0.5.3", optional = true }
panic-itm = { version = "0.4", optional = true }
log = { version = "0.4", optional = true }

[features]
smoltcp-phy = ["smoltcp"]
nal = [ 
    "embedded-time", "embedded-nal", "heapless",
    "smoltcp-phy", "smoltcp/socket-tcp", "smoltcp/ethernet"
]
# Example-based features
smoltcp-examples = [
    "smoltcp-phy", "smoltcp/socket-tcp", "smoltcp/ethernet"
]
tx_stm32f407 = [
    "stm32f4xx-hal/stm32f407", "cortex-m", "cortex-m-rtic",
    "panic-itm", "log"
]
tcp_stm32f407 = [
    "stm32f4xx-hal/stm32f407", "cortex-m", "cortex-m-rt", "cortex-m-rtic",
    "smoltcp-examples", "panic-itm", "log"]
default = []

[[example]]
name = "tx_stm32f407"
required-features = ["tx_stm32f407"]

[[example]]
name = "tcp_stm32f407"
required-features = ["tcp_stm32f407"]

[profile.release]
codegen-units = 1
incremental = false
debug = true
opt-level = "s"
lto = true
