[package]
categories = ["embedded", "no-std"]
name = "enc424j600"
description = "Embbeded Rust Ethernet driver for ENC424J600 Ethernet controller with SPI interface"
authors = ["Harry Ho <hh@m-labs.hk>", "Dip Cheung <dc@m-labs.hk>"]
version = "0.3.0"
keywords = ["ethernet", "eth", "enc424j600", "stm32", "stm32f4xx"]
repository = "https://github.com/quartiq/enc424j600"
edition = "2018"
license = "BSD-2-Clause"

[dependencies]
volatile-register = "0.2"
aligned = "0.3"
embedded-hal = "0.2"
smoltcp = { version = "0.7.0", default-features = false, features = [ "socket-raw", "proto-ipv4",
    "proto-ipv6", "socket-tcp", "ethernet"], optional = true }
cortex-m = {version = "0.5", optional = true }

# Optional dependencies for building examples
[dev-dependencies]
stm32f4xx-hal = { version = "0.8", features = ["stm32f407", "rt"] }
cortex-m-rt = "0.6"
cortex-m-rtic = "0.5.3"
panic-itm = "0.4"
log = "0.4"

[features]
smoltcp-phy = ["smoltcp"]
cortex-m-cpu = ["cortex-m"]
default = []

[[example]]
name = "tx_stm32f407"
required-features = ["smoltcp", "cortex-m-cpu"]

[[example]]
name = "tcp_stm32f407"
required-features = ["smoltcp", "cortex-m-cpu"]

[profile.release]
codegen-units = 1
incremental = false
debug = true
opt-level = "s"
lto = true
