[package]
categories = ["embedded", "no-std"]
name = "enc424j600"
description = "Embbeded Rust Ethernet driver for ENC424J600 Ethernet controller with SPI interface"
authors = ["Harry Ho <hh@m-labs.hk>", "Dip Cheung <dc@m-labs.hk>"]
version = "0.4.0"
keywords = ["ethernet", "eth", "enc424j600", "stm32", "stm32f4xx"]
repository = "https://git.m-labs.hk/M-Labs/ENC424J600"
edition = "2018"
license = "BSD-2-Clause"

[dependencies]
volatile-register = "0.2"
aligned = "0.3"
embedded-hal = "1"
smoltcp = { version = "0.7.0", default-features = false, features = [ "socket-raw", "proto-ipv4",
    "proto-ipv6", "socket-tcp", "ethernet"], optional = true }

[features]
smoltcp-phy = ["smoltcp"]
default = []

[profile.release]
codegen-units = 1
incremental = false
debug = true
opt-level = "s"
lto = true
